--- a/Beers-footer.htm
+++ b/Beers-footer.htm
@@ -143,7 +143,7 @@
                 <tr>
                     <td width="100%" valign="top" bgcolor="#ffffff">
 
-                        <table class="deviceWidth" width="100%" border="0" cellpadding="0" cellspacing="0" align="left" style="margin:0 auto; margin-bottom: 20px;">
+                        <table class="deviceWidth" width="100%" border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; margin-bottom: 20px;">
                             <tr>
                                 <td valign="top" style="padding:0" bgcolor="#ffffff">
                                     <img class="deviceWidth" src="images/beers-footer-algemeen Paars 30% - Oranje 70% schuin.png" style="padding-bottom: 20px;">
